# ==========================
# debug_hud.gd
# ==========================
class_name debug_hud extends Control

# ==========================
# Referencias de Nodos del Debug HUD
# ==========================
@onready var debug_layer = $debug_hud  # 游댳 CanvasLayer que se oculta y muestra
@onready var pj_label = $debug_hud/pj_1
@onready var enemy_label = $debug_hud/enemy_1

# ==========================
# Variables Internas
# ==========================
var debug_visible: bool = false  # 游댳 Estado inicial (invisible)

# ==========================
# Inicializaci칩n
# ==========================
func _ready() -> void:
	add_to_group("debug_hud")  # 游댳 Asegurar que est치 en el grupo correcto
	debug_layer.visible = debug_visible  # 游댳 Ocultar al inicio
	SYSLOG.debug_log("DEBUG HUD inicializado y oculto.", "DEBUG_HUD")

# ==========================
# Capturar Entrada del Usuario
# ==========================
func _input(event: InputEvent) -> void:
	if event is InputEventKey and event.pressed:
		if event.as_text_key_label() == "췈":
			debug_visible = !debug_visible
			debug_layer.visible = debug_visible
			SYSLOG.debug_log("DEBUG HUD toggled: %s" % str(debug_visible), "DEBUG_HUD")

			# 游댳 Si el debug est치 visible, actualizar la informaci칩n
			if debug_visible:
				actualizar_debug()

# ==========================
# Actualizar Informaci칩n del Debug HUD
# ==========================
func actualizar_debug() -> void:
	if not debug_visible:
		return  # 游댳 Solo actualizar si el debug est치 visible

	# 游댳 Obtener el jugador activo
	var player = get_tree().get_nodes_in_group("pj")[0] if get_tree().get_nodes_in_group("pj").size() > 0 else null
	if not player:
		SYSLOG.error_log("No se encontr칩 el jugador para mostrar en el debug.", "DEBUG_HUD")
		pj_label.text = "No se encontr칩 el jugador."
	else:
		# 游댳 Actualizar stats del jugador
		pj_label.text = "DEBUG Pj_1:\n" + \
			"Health: %d\n" % player.health + \
			"Damage: %d\n" % player.damage + \
			"Speed: %d\n" % player.speed + \
			"Attack Speed: %.2f\n" % player.attack_speed + \
			"Defense: %d\n" % player.defense + \
			"Energy: %d\n" % player.energy + \
			"Precision: %d\n" % player.precision + \
			"Critical: %d\n" % player.crit + \
			"Dodge: %d\n" % player.dodge

	# 游댳 Obtener el enemigo m치s cercano al jugador
	var closest_enemy = _get_closest_enemy(player)
	if closest_enemy:
		enemy_label.text = "DEBUG Enemy:\n" + \
			"Health: %d\n" % closest_enemy.health + \
			"Damage: %d\n" % closest_enemy.damage + \
			"Speed: %d\n" % closest_enemy.speed + \
			"Attack Speed: %.2f\n" % closest_enemy.attack_speed + \
			"Defense: %d\n" % closest_enemy.defense + \
			"Precision: %d\n" % closest_enemy.precision + \
			"Critical: %d\n" % closest_enemy.crit + \
			"Dodge: %d\n" % closest_enemy.dodge
	else:
		enemy_label.text = "No hay enemigos visibles."
		SYSLOG.error_log("No se encontr칩 enemigo para mostrar en el debug.", "DEBUG_HUD")

# ==========================
# Obtener el Enemigo M치s Cercano
# ==========================
func _get_closest_enemy(player: Node) -> Node:
	if not player:
		return null

	var enemies = get_tree().get_nodes_in_group("enemy")
	if enemies.is_empty():
		return null

	var closest_enemy = null
	var min_distance = INF  # Iniciamos con una distancia infinita

	for enemy in enemies:
		if not enemy or not is_instance_valid(enemy):
			continue  # Evitar enemigos nulos o eliminados

		var distance = player.global_position.distance_to(enemy.global_position)
		if distance < min_distance:
			min_distance = distance
			closest_enemy = enemy

	return closest_enemy

# ==========================
# Refrescar Debug HUD Cada Segundo
# ==========================
func _process(_delta: float) -> void:
	if debug_visible:
		actualizar_debug()  # 游댳 Solo actualizar si est치 activo
